# tesztelosmosze

./: .gitignore  Damage.h  Damage_8h_source.html  Game.cpp  Game.h  Game_8h_source.html  Hero.cpp  Hero.h  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  Makefile  Map.cpp  Map.h  Map_8h_source.html  Monster.cpp  Monster.h  Monster_8h_source.html  Parser.cpp  Parser.h  Parser_8h_source.html  README.md  Renderer.h  Renderer_8h_source.html  Report.md  SVGRenderer.cpp  SVGRenderer.h  SVGRenderer_8h_source.html  TextRenderer.cpp  TextRenderer.h  TextRenderer_8h_source.html  Unit.cpp  Unit.h  Unit_8h_source.html  annotated.html  autotoc_md0.html  classCharacterSVGRenderer-members.html  classCharacterSVGRenderer.html  classCharacterSVGRenderer__coll__graph.map  (+157 more)
maps/: exampleMap.txt  markedmap.txt  scenario1Map.txt  scenario5Map.txt
scenarios/: preparedGameScenario.json  scenario1.json  scenario5.json
search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_13.js  all_14.html  all_14.js  all_15.html  all_15.js  all_16.html  all_16.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  (+124 more)
test/: CMakeLists.txt  brokenFile.json  good_log.txt  good_output.txt  missingKeys.json  mixedupKeys.json  muchWhitespace.json  parser_test.cpp  prpgscn.txt  scn1.txt  scn5.txt  testScenario.json  unittests.cpp  wrongUnit.json
test/units/: good_output.txt  unit1.json  unit2.json  unit3.json
(+18 files in other folders)
